Fix link wrapping

--- a/GhostWriter/Editor/Resources/mobiledoc.css
+++ b/GhostWriter/Editor/Resources/mobiledoc.css
@@ -36,7 +36,7 @@
   
   .__mobiledoc-editor a {
     color: #0b8bff;
-    white-space: nowrap;
+    white-space: normal;
   }
   
   .__mobiledoc-editor h1,
